# video-summary

./: .gitignore  LICENSE  README.md  pyproject.toml
codex-skill/: SKILL.md
codex-skill/agents/: openai.yaml
codex-skill/references/: workflow.md
codex-skill/scripts/: bootstrap-video-summary.sh  run-video-summary.sh
tests/: test_candidates.py  test_captions.py
video_summary/: __init__.py  __main__.py  brief.py  candidates.py  captions.py  clip_results.py  look_presets.py  media.py  models.py  pipeline.py  planner.py  renderer.py  taxonomy.py
workflow/: README.md  pipeline.md
workflow/examples/: project_prompt.example.md
