[project]
name = "video-summary"
version = "0.1.0"
description = "Prompt-first local video editing pipeline for travel footage"
requires-python = ">=3.12"
dependencies = [
  "faster-whisper>=1.1.0",
  "pillow>=11.3.0",
  "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
