[project]
name = "video-summary"
version = "0.1.0"
description = "Prompt-first local video editing pipeline for travel footage"
requires-python = ">=3.12"
dependencies = [
  "faster-whisper>=1.1.0",
  "numpy>=2.2.0",
  "openai>=1.108.0",
  "pillow>=11.3.0",
  "pyyaml>=6.0.3",
  "torch>=2.8.0",
  "transformers>=4.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
